Fix: products dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,13 @@ body.dark .orders-table tr:hover {
   cursor: pointer;
   background-color: #333; 
 }
+body.dark .product-table th {
+  background-color: #121212; 
+}
+body.dark .product-table tr:hover {
+  cursor: pointer;
+  background-color: #333; 
+}
 body.dark .message-sender { 
   color: white;
 }
